--- a/package.json
+++ b/package.json
@@ -1,76 +1,76 @@
 {
-  "name": "dk-app",
-  "main": "expo-router/entry",
-  "version": "1.0.0",
-  "scripts": {
-    "start": "expo start",
-    "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web",
-    "lint": "expo lint",
-    "build-storybook": "storybook build",
-    "storybook:web": "storybook dev -p 6006",
-    "storybook-generate": "sb-rn-get-stories",
-    "storybook": "cross-env EXPO_PUBLIC_STORYBOOK_ENABLED='true' expo start",
-    "storybook:ios": "cross-env EXPO_PUBLIC_STORYBOOK_ENABLED='true' expo start --ios",
-    "storybook:android": "cross-env EXPO_PUBLIC_STORYBOOK_ENABLED='true' expo start --android"
-  },
-  "dependencies": {
-    "@expo/vector-icons": "^15.0.3",
-    "@react-navigation/bottom-tabs": "^7.4.0",
-    "@react-navigation/elements": "^2.6.3",
-    "@react-navigation/native": "^7.1.8",
-    "expo": "~54.0.32",
-    "expo-constants": "~18.0.13",
-    "expo-font": "~14.0.11",
-    "expo-haptics": "~15.0.8",
-    "expo-image": "~3.0.11",
-    "expo-linking": "~8.0.11",
-    "expo-router": "~6.0.22",
-    "expo-splash-screen": "~31.0.13",
-    "expo-status-bar": "~3.0.9",
-    "expo-symbols": "~1.0.8",
-    "expo-system-ui": "~6.0.9",
-    "expo-web-browser": "~15.0.10",
-    "cross-env": "~10.1.0",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "react-native": "0.81.5",
-    "react-native-gesture-handler": "~2.28.0",
-    "react-native-worklets": "0.5.1",
-    "react-native-reanimated": "~4.1.1",
-    "react-native-safe-area-context": "~5.6.0",
-    "react-native-screens": "~4.16.0",
-    "react-native-web": "~0.21.0",
-    "@babel/core": "~7.28.6",
-    "babel-loader": "~8.4.1",
-    "@react-native-async-storage/async-storage": "~2.2.0",
-    "@react-native-community/datetimepicker": "~8.6.0",
-    "@react-native-community/slider": "~5.1.2",
-    "@gorhom/bottom-sheet": "~5.2.8",
-    "react-native-svg": "^15.15.1",
-    "@storybook/addon-ondevice-controls": "~10.1.11",
-    "@storybook/addon-ondevice-actions": "~10.1.11",
-    "@storybook/react-native": "~10.1.11",
-    "storybook": "~10.2.0"
-  },
-  "devDependencies": {
-    "@types/react": "~19.1.0",
-    "typescript": "~5.9.2",
-    "eslint": "~9.25.0",
-    "eslint-config-expo": "~10.0.0",
-    "storybook": "~10.2.0",
-    "@storybook/react-native-web-vite": "~10.2.0",
-    "@chromatic-com/storybook": "~5.0.0",
-    "@storybook/addon-vitest": "~10.2.0",
-    "@storybook/addon-a11y": "~10.2.0",
-    "@storybook/addon-docs": "~10.2.0",
-    "vite": "~7.3.1",
-    "eslint-plugin-storybook": "~10.2.0",
-    "vitest": "~4.0.17",
-    "playwright": "~1.57.0",
-    "@vitest/browser-playwright": "~4.0.17",
-    "@vitest/coverage-v8": "~4.0.17"
-  }
+	"name": "dk-app",
+	"main": "expo-router/entry",
+	"version": "1.0.0",
+	"scripts": {
+		"start": "expo start",
+		"check": "biome check",
+		"check:fix": "biome check --write ./",
+		"reset-project": "node ./scripts/reset-project.js",
+		"android": "expo start --android",
+		"ios": "expo start --ios",
+		"web": "expo start --web",
+		"lint": "expo lint",
+		"build-storybook": "storybook build",
+		"storybook:web": "storybook dev -p 6006",
+		"storybook-generate": "sb-rn-get-stories",
+		"storybook": "cross-env EXPO_PUBLIC_STORYBOOK_ENABLED='true' expo start",
+		"storybook:ios": "cross-env EXPO_PUBLIC_STORYBOOK_ENABLED='true' expo start --ios",
+		"storybook:android": "cross-env EXPO_PUBLIC_STORYBOOK_ENABLED='true' expo start --android"
+	},
+	"dependencies": {
+		"@babel/core": "~7.28.6",
+		"@expo/vector-icons": "^15.0.3",
+		"@gorhom/bottom-sheet": "~5.2.8",
+		"@react-native-async-storage/async-storage": "~2.2.0",
+		"@react-native-community/datetimepicker": "~8.6.0",
+		"@react-native-community/slider": "~5.1.2",
+		"@react-navigation/bottom-tabs": "^7.4.0",
+		"@react-navigation/elements": "^2.6.3",
+		"@react-navigation/native": "^7.1.8",
+		"@storybook/addon-ondevice-actions": "~10.1.11",
+		"@storybook/addon-ondevice-controls": "~10.1.11",
+		"@storybook/react-native": "~10.1.11",
+		"babel-loader": "~8.4.1",
+		"cross-env": "~10.1.0",
+		"expo": "~54.0.32",
+		"expo-constants": "~18.0.13",
+		"expo-font": "~14.0.11",
+		"expo-haptics": "~15.0.8",
+		"expo-image": "~3.0.11",
+		"expo-linking": "~8.0.11",
+		"expo-router": "~6.0.22",
+		"expo-splash-screen": "~31.0.13",
+		"expo-status-bar": "~3.0.9",
+		"expo-symbols": "~1.0.8",
+		"expo-system-ui": "~6.0.9",
+		"expo-web-browser": "~15.0.10",
+		"react": "19.1.0",
+		"react-dom": "19.1.0",
+		"react-native": "0.81.5",
+		"react-native-gesture-handler": "~2.28.0",
+		"react-native-reanimated": "~4.1.1",
+		"react-native-safe-area-context": "~5.6.0",
+		"react-native-screens": "~4.16.0",
+		"react-native-svg": "^15.15.1",
+		"react-native-web": "~0.21.0",
+		"react-native-worklets": "0.5.1",
+		"storybook": "~10.2.0"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "2.3.11",
+		"@chromatic-com/storybook": "~5.0.0",
+		"@storybook/addon-a11y": "~10.2.0",
+		"@storybook/addon-docs": "~10.2.0",
+		"@storybook/addon-vitest": "~10.2.0",
+		"@storybook/react-native-web-vite": "~10.2.0",
+		"@types/react": "~19.1.0",
+		"@vitest/browser-playwright": "~4.0.17",
+		"@vitest/coverage-v8": "~4.0.17",
+		"playwright": "~1.57.0",
+		"storybook": "~10.2.0",
+		"typescript": "~5.9.2",
+		"vite": "~7.3.1",
+		"vitest": "~4.0.17"
+	}
 }
