--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
 		"expo-symbols": "~1.0.8",
 		"expo-system-ui": "~6.0.9",
 		"expo-web-browser": "~15.0.10",
+		"nativewind": "~4.2.1",
 		"react": "19.1.0",
 		"react-dom": "19.1.0",
 		"react-native": "0.81.5",
@@ -55,7 +56,8 @@
 		"react-native-svg": "^15.15.1",
 		"react-native-web": "~0.21.0",
 		"react-native-worklets": "0.5.1",
-		"storybook": "~10.2.0"
+		"storybook": "~10.2.0",
+		"tailwindcss": "~3"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "2.3.11",
