--- a/package.json
+++ b/package.json
@@ -61,6 +61,8 @@
 	},
 	"devDependencies": {
 		"@biomejs/biome": "2.3.11",
+		"autoprefixer": "~10.4.20",
+		"postcss": "~8.4.49",
 		"@chromatic-com/storybook": "~5.0.0",
 		"@storybook/addon-a11y": "~10.2.0",
 		"@storybook/addon-docs": "~10.2.0",
